force-app/main/default/objects/Transcript_Sent__c/Transcript_Sent__c.object-meta.xml
<CustomObject>
    <description>ODS data source--script here:  https://github.com/ASU/crm-salesforce-dataload/blob/master/odata_sql/JBT_RET_TRANSCRIPT_VW.sql 
Data is source from PS ASU_TSCPT_REQST, PS ASU_TSCPT_HDR, &amp; PS ASU_TSCPT__DTL tables</description>
    <label>Transcript Sent</label>
    <nameField>
        <label>Transcript Sent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transcript Sent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>