force-app/main/default/objects/Transcript_Sent__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Data sourced from ODS:  PS_ASU_REQUEST_DTL</description>
    <label>Recipient Address 1</label>
    <length>55</length>
    <type>Text</type>
</CustomField>