force-app/main/default/objects/Transcript_Sent__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Data sourced from ODS:  PS_ASU_REQUEST_DTL</description>
    <label>Recipient Address 2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>