force-app/main/default/objects/Transcript_Sent__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Data sourced from ODS:  PS_ASU_REQUEST_DTL</description>
    <label>Recipient City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>