force-app/main/default/objects/Transcript_Sent__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data sourced from ODS: PS_ASU_REQUEST_DTL</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transcript Sent</relationshipLabel>
    <relationshipName>Transcript_Sent</relationshipName>
    <type>Lookup</type>
</CustomField>