force-app/main/default/objects/Transcript_Sent__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Data sourced from ODS:  PS_ASU_REQUEST_DTL</description>
    <label>Recipient Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>