force-app/main/default/objects/Transcript_Sent__c/fields/Request_Or_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Or_Sent_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Data sourced from ODS:  PS_ASU_REQUEST_DTL</description>
    <label>Request Datetime</label>
    <type>DateTime</type>
</CustomField>